fix z-index, env

--- a/client/src/styles/post.css
+++ b/client/src/styles/post.css
@@ -81,6 +81,7 @@
     top: 45px;
     left: 10px;
     width: 95%;
+    z-index: 10;
 }
 
 .post .profileInfoNav .aboutMeP {
